--- a/TheDataPackage/minimum_metadata.Rmd
+++ b/TheDataPackage/minimum_metadata.Rmd
@@ -1,8 +1,57 @@
-# Minimum metadata
+---
+title: "Minimum metadata"
+author: " "
+date: "`r format(Sys.time(), '%d %B, %Y')`"
+output: html_document
+---
 
-## Dataset Name: 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-## Responsible person: 
+***
+# Dataset description
+***
+***
+### Project Name: 
 
+### Dataset Name: 
 
-[....]
+### Responsible Person:
+
+### Email:
+
+### Organisation: 
+### Abstract:
+
+### Keywords:
+
+### License and Usage Rights: 
+***
+***
+# Broad data description
+***
+***
+### Geographic description:
+
+### Bounding Coordinates:
+
+### Temporal Coverage:
+
+### Temporal description:
+
+### Date range:
+
+### Taxonomic Coverage:
+***
+***
+# Specific data description
+***
+***
+### Methods:
+
+### Sampling design:
+
+### Variable descriptions:
+
+***
